# region-service

./: Cargo.toml  LICENSE  README.md  build.rs
proto/: components.proto
src/: main.rs
src/connection/: connection.rs
src/ecs/: mod.rs  physics.rs  region.rs  simulation.rs  system.rs  world.rs
src/protos/: components.rs
