[package]
name = "region-service"
version = "0.1.0"
authors = ["disturbing <joseph@kintohub.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
legion = "0.3.1"
log = "0.4"
rapier3d = "0.2.1"
tokio = { version = "0.3", features = ["full"] }
tokio-test = "0.3"
priomutex = "0.3.1"
protobuf = "2.18"
dyn-clone = "1.0.3"
rayon = "1.5"

[build-dependencies]
protoc-rust = "2.0"

[profile.release]
debug = true